syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

service HelloWorldService {
  rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse) {}
}
  
message HelloWorldRequest {
}

message HelloWorldResponse {
  string response = 1;
}
